tests/src/frontend/typechecking/invalid/infer_frozen_cla_4.sk
mutable class Foo<T: frozen>(x: mutable Array<Array<T>>) {
  static fun test(T): void {
    void
  }
}

fun test(): void {
  Foo::test(mutable Array[])
}
